--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,78 @@
 @import 'tailwindcss/dist/base.css';
 @import 'tailwindcss/dist/components.css';
 @import 'tailwindcss/dist/utilities.css';
+
+html, body
+{
+    background-color: rgb(231, 252, 236);
+    padding: 0;
+    margin: 0;
+}
+
+#app{
+    /* border: 1px solid black; */
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    height: 70vh;
+    width: 100%;
+    grid-row: 2rem;
+}
+.content{
+  display: grid;
+  /* border: 1px solid red; */
+flex-wrap: wrap;
+grid-template-columns: 20% 60%;
+grid-template-rows: 70% 18%;
+  grid-gap: 10px;
+  /* grid-auto-rows: minmax(100px, 2); */
+ 
+    width: auto;
+    background-color: white;
+    border: 0.8rem solid rgb(231, 252, 236) ;
+    
+}
+.content img{
+    /* border: 1px solid red; */
+    width: 43%;
+    height:70%;
+    grid-column: 1 / 3;
+    grid-row: 1;
+ 
+    
+}
+.content h2{
+     /* border: 1px solid red;  */
+    width: auto;
+    font-size: 2rem;
+    height:auto;
+    display: flex;
+    justify-content:end;
+    grid-column: 2 / 4;
+  grid-row: 1 / 2;
+  font-size: 1.6rem;
+    padding: 0.4rem;
+}
+.price{
+    display: flex;
+   
+    align-items:flex-end;
+    border-top: 1px solid rgb(208, 218, 195);
+    width: 100%;
+    height: 100%;
+    font-size: 1.4rem;
+    grid-column: 1 / 4;
+    grid-row: 2;
+}
+@media screen and (max-width: 825px) {
+    #app{
+        grid-template-columns: 50% 50%;
+    }
+  }
+@media (max-width: 430px) {
+    #app{
+        grid-template-columns: 100%;
+    }
+    .content h2{
+        font-size: 1.5rem;    
+    }
+  }
